# electron-simple-movie-collection

./: .babelrc  .gitignore  README.md  TODO  android.sh  content.js  import-gcstar.js  index.html  index.js  moviesapi-protocol.js  package-lock.json  package.json  parcel.js  style.css  test-collection.json
android/: AndroidManifest.xml  keystorepass
android/assets/: www
android/assets/www/: index.html
android/java/fr/spidery/moviecollection/: MainActivity.java  R.java
android/res/layout/: activity_main.xml
android/res/values/: colors.xml  strings.xml  styles.xml
app/: content.js  dashboard.js  index.html  preload.js  style.css
app/components/: app-titlebar.js
application/: browser-preload.js  dashboard.js  electron-ipc-log.js  helpers.js  index-android.html  index-electron.html  index.html  index.js  logger.js  moviesapi-protocol.js  platform-specific.js  style.css  utils.js
application/components/: app-sidebar.js  app-statusbar.js  app-titlebar.js  app-toolbar.js  product-panels.js
application/platform-specific/: electron-preload.js
archives/: package.json
archives/electron/: index.js  package.json  preload.js
archives/webkit2gtk/: desktop.in  meson.build  meson_options.txt  moviecollection.c  web-extension-proxy.c
browser-application/: content-old.js  content.js  dashboard.js  index-android.html  index-electron.html  index.cordova.html  index.html  moviesapi-protocol.js  preload.js  style.css
browser-application/components/: app-sidebar.js  app-statusbar.js  app-titlebar.js  app-toolbar.js  product-item.js  product-panels.js  product-preview-publication.js  product-preview.js  product-publication.js
browser-application/platform-specific/: electron-preload.js
electron/: electron-preload.js  index.js  logger.js  package.json  preload.js  www
gtkapplication/: TODO  fetchmovie.c  gresource.xml  macros.h  main.c  meson.build  moviecollection.c  moviecollection.h  moviecollection.spec  style.css  vector.c
gtkapplication/csources/: application.c  application.h  collection.c  collection.h  dialogs.c  dialogs.h  fetchmovie.c  headerbar.c  headerbar.h  movietype.c  movietype.h  sidebar.c  sidebar.h  statusbar.c  statusbar.h  toolbar.c  toolbar.h  vector.c  vector.h  widgets.c  widgets.h  window.c  window.h
gtkapplication/subprojects/: json-glib.wrap
test-collection/: bugged-file.json  test-collection.json
webapplication/: .babelrc  components.js  dashboard.js  index.html  package.json  platform-specific.js  store.js  style.css  webpack.config.js
webapplication/components/: app-statusbar.js  app-titlebar.js  app-toolbar.js
webkit2gtk/: meson.build  moviecollection.c  style.css  web-extension-proxy.c
